--- a/4ngel0-7040-blog/package.json
+++ b/4ngel0-7040-blog/package.json
@@ -2,10 +2,11 @@
   "name": "4ngel0-7040",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "sass": "sass styles/main.scss assets/css/main.css",
+    "sass": "sass main.scss assets/css/main.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,5 +15,8 @@
   "devDependencies": {
     "sass": "^1.61.0",
     "vite": "^4.2.1"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.7"
   }
 }
